// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MolocoMCM's land destination action: all fields 1`] = `
Object {
  "channel_type": "9Z&a&C9Tb&",
  "device": Object {
    "advertising_id": "9Z&a&C9Tb&",
    "ip": "9Z&a&C9Tb&",
    "language": "9Z&a&C9Tb&",
    "model": "9Z&a&C9Tb&",
    "os": "9Z&A&C9TB&",
    "os_version": "9Z&a&C9Tb&",
    "ua": "9Z&a&C9Tb&",
    "unique_device_id": "9Z&a&C9Tb&",
  },
  "event_type": "LAND",
  "id": "9Z&a&C9Tb&",
  "items": Array [
    Object {
      "id": "9Z&a&C9Tb&",
      "price": Object {
        "amount": -29405557806858.24,
        "currency": "THB",
      },
      "quantity": -2940555780685824,
      "seller_id": "9Z&a&C9Tb&",
    },
  ],
  "page_id": "9Z&a&C9Tb&",
  "referrer_page_id": "9Z&a&C9Tb&",
  "session_id": "9Z&a&C9Tb&",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "9Z&a&C9Tb&",
}
`;

exports[`Testing snapshot for MolocoMCM's land destination action: required fields 1`] = `
Object {
  "channel_type": "9Z&a&C9Tb&",
  "event_type": "LAND",
  "id": "9Z&a&C9Tb&",
  "page_id": "9Z&a&C9Tb&",
  "referrer_page_id": "9Z&a&C9Tb&",
  "session_id": "9Z&a&C9Tb&",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "9Z&a&C9Tb&",
}
`;
